--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ section {
     display: grid;
     grid-template-columns: repeat(3, auto);
     width: 306px;
-    margin 50px auto;
+    margin: 50px auto;
 }
 .cell {
     font-family: "Permanent Marker", cursive;
@@ -18,5 +18,5 @@ section {
     border: 1px solid #333333;
     cursor: pointer;
     line-height: 100px;
-    font-size 60px;
+    font-size: 60px;
 }
